tests/errors/mod_cpp_modfile_module.f90
module mod_cpp_modfile_module
  implicit none
contains
  subroutine s(a)
    integer, intent(in) :: a
  end subroutine s
end module mod_cpp_modfile_module

